# learn-selenium

./: pyproject.toml
demo-1/: main.py
demo-2/: main.py
demo-3/: main.py
